<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intro_three"
    android:padding="10dp">

    <TextView
        android:id="@+id/welcomeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/setup"
        android:textAlignment="center"
        android:textColor="@color/white_only"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/notification_reader"
        android:textColor="@color/white_only"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/welcomeTv" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/notification_notice"
        android:textColor="@color/white_only"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/enableBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_titleTv" />

    <Button
        android:id="@+id/enableBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/enable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_titleTv" />

</androidx.constraintlayout.widget.ConstraintLayout>